--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ repos:
   - repo: https://github.com/gruntwork-io/pre-commit
     rev: v0.1.12 # Get the latest from: https://github.com/gruntwork-io/pre-commit/releases
     hooks:
-      - id: terraform-fmt
+      #- id: terraform-fmt
       - id: shellcheck
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
